--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -55,7 +55,9 @@
 <li><b>Clear Console</b>: &#1080;&#1079;&#1090;&#1088;&#1080;&#1074;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080;, &#1074;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080; &#1074; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python. &#1058;&#1086;&#1074;&#1072; &#1077; &#1087;&#1086;&#1083;&#1077;&#1079;&#1085;&#1086;, &#1072;&#1082;&#1086; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python &#1077; &#1087;&#1098;&#1083;&#1085;&#1072; &#1089;&#1098;&#1089; &#1089;&#1098;&#1086;&#1073;&#1097;&#1077;&#1085;&#1080;&#1103; &#1080; &#1087;&#1088;&#1077;&#1076;&#1080; &#1090;&#1086;&#1074;&#1072; &#1074;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1088;&#1072;&#1079;&#1089;&#1077;&#1081;&#1074;&#1072;&#1090; &#1087;&#1088;&#1080; &#1090;&#1077;&#1089;&#1090;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1085;&#1086;&#1074;&#1072; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1103;. &#1058;&#1086;&#1074;&#1072; &#1077; &#1087;&#1088;&#1086;&#1089;&#1090;&#1086; &#1077;&#1089;&#1090;&#1077;&#1090;&#1080;&#1095;&#1085;&#1086;, &#1090;&#1098;&#1081; &#1082;&#1072;&#1090;&#1086; &#1090;&#1072;&#1079;&#1080; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1072; &#1085;&#1077; &#1080;&#1079;&#1090;&#1088;&#1080;&#1074;&#1072; &#1089;&#1098;&#1097;&#1077;&#1089;&#1090;&#1074;&#1091;&#1074;&#1072;&#1097;&#1080;&#1090;&#1077; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1083;&#1080;&#1074;&#1080;, &#1085;&#1080;&#1090;&#1086; &#1080;&#1079;&#1095;&#1080;&#1089;&#1090;&#1074;&#1072; &#1080;&#1084;&#1087;&#1086;&#1088;&#1090;&#1080;&#1088;&#1072;&#1085;&#1080;&#1090;&#1077; &#1084;&#1086;&#1076;&#1091;&#1083;&#1080; &#1074; &#1089;&#1077;&#1089;&#1080;&#1103;&#1090;&#1072;.</li>
 <li><b>Insert File Name...</b>: &#1086;&#1090;&#1074;&#1072;&#1088;&#1103; &#1076;&#1080;&#1072;&#1083;&#1086;&#1075;&#1086;&#1074; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094; &#1079;&#1072; &#1090;&#1098;&#1088;&#1089;&#1077;&#1085;&#1077; &#1085;&#1072; &#1092;&#1072;&#1081;&#1083; &#1074; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072;, &#1089;&#1083;&#1077;&#1076; &#1082;&#1086;&#1077;&#1090;&#1086; &#1074;&#1084;&#1098;&#1082;&#1074;&#1072; &#1087;&#1098;&#1083;&#1085;&#1080;&#1103; &#1087;&#1098;&#1090; &#1085;&#1072; &#1092;&#1072;&#1081;&#1083;&#1072;. &#1058;&#1086;&#1074;&#1072; &#1077; &#1087;&#1086;&#1083;&#1077;&#1079;&#1085;&#1086; &#1076;&#1072; &#1089;&#1077; &#1090;&#1077;&#1089;&#1090;&#1074;&#1072;&#1090; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1086;&#1073;&#1088;&#1072;&#1073;&#1086;&#1090;&#1074;&#1072;&#1090; &#1074;&#1093;&#1086;&#1076;&#1077;&#1085; &#1092;&#1072;&#1081;&#1083;, &#1073;&#1077;&#1079; &#1076;&#1072; &#1089;&#1077; &#1085;&#1072;&#1083;&#1072;&#1075;&#1072; &#1076;&#1072; &#1089;&#1077; &#1087;&#1080;&#1096;&#1077; &#1094;&#1103;&#1083;&#1086;&#1090;&#1086; &#1080;&#1084;&#1077; &#1074; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072;, &#1082;&#1086;&#1077;&#1090;&#1086; &#1077; &#1087;&#1088;&#1077;&#1076;&#1088;&#1072;&#1079;&#1087;&#1086;&#1083;&#1086;&#1078;&#1077;&#1085;&#1086; &#1082;&#1098;&#1084; &#1075;&#1088;&#1077;&#1096;&#1082;&#1080;. &#1058;&#1072;&#1079;&#1080; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1072; &#1085;&#1077; &#1080;&#1079;&#1087;&#1098;&#1083;&#1085;&#1103;&#1074;&#1072; &#1092;&#1072;&#1081;&#1083;&#1072; &#1080; &#1085;&#1077; &#1075;&#1086; &#1080;&#1084;&#1087;&#1086;&#1088;&#1090;&#1080;&#1088;&#1072; &#1082;&#1072;&#1090;&#1086; &#1084;&#1086;&#1076;&#1091;&#1083; &#1085;&#1072; Python, &#1090;&#1086;&#1081; &#1087;&#1088;&#1086;&#1089;&#1090;&#1086; &#1074;&#1088;&#1098;&#1097;&#1072; &#1087;&#1098;&#1083;&#1085;&#1080;&#1103; &#1087;&#1098;&#1090; &#1085;&#1072; &#1090;&#1086;&#1079;&#1080; &#1092;&#1072;&#1081;&#1083;.</li>
 <li><b>Word Wrap</b>: &#1087;&#1088;&#1077;&#1085;&#1072;&#1089;&#1103; &#1084;&#1085;&#1086;&#1075;&#1086; &#1076;&#1098;&#1083;&#1075;&#1080; &#1088;&#1077;&#1076;&#1086;&#1074;&#1077;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1085;&#1072;&#1076;&#1074;&#1080;&#1096;&#1072;&#1074;&#1072;&#1090; &#1093;&#1086;&#1088;&#1080;&#1079;&#1086;&#1085;&#1090;&#1072;&#1083;&#1085;&#1072;&#1090;&#1072; &#1096;&#1080;&#1088;&#1080;&#1085;&#1072; &#1085;&#1072; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python.</li></ul>
-<h2><span class="mw-headline" id="Notes">Notes</span></h2>
+<p><span id="Notes"></span>
+</p>
+<h2><span id=".D0.91.D0.B5.D0.BB.D0.B5.D0.B6.D0.BA.D0.B8"></span><span class="mw-headline" id="&#1041;&#1077;&#1083;&#1077;&#1078;&#1082;&#1080;">&#1041;&#1077;&#1083;&#1077;&#1078;&#1082;&#1080;</span></h2>
 <ul><li>One has the ability to scroll the API in the Python Console. Example:
 <ol><li>In the console type: <code>FreeCAD.</code></li>
 <li>A dialog box will display with optional classes/functions to choose from</li>
@@ -124,13 +126,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124062751
+Cached time: 20260124062804
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.165 seconds
-Preprocessor visited node count: 531/1000000
+CPU time usage: 0.098 seconds
+Real time usage: 0.125 seconds
+Preprocessor visited node count: 532/1000000
 Post&#8208;expand include size: 32031/2097152 bytes
 Template argument size: 12138/2097152 bytes
 Highest expansion depth: 5/100
@@ -140,19 +142,19 @@ Unstrip post&#8208;expand size: 2688/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   56.669      1 -total
- 24.86%   14.088      1 Template:Std_Base_navi/bg
- 17.96%   10.179      3 Template:Navigation_menu_2
- 17.48%    9.906      1 Template:Interface_navi/bg
- 13.10%    7.424      1 Template:Userdocnavi/bg
-  7.14%    4.044      2 Template:Code
-  6.28%    3.557      2 Template:KEY
-  6.25%    3.540      3 Template:Emphasis
-  6.02%    3.413      1 Template:TOCright
-  5.83%    3.303      2 Template:Caption
+100.00%   35.733      1 -total
+ 30.42%   10.869      1 Template:Std_Base_navi/bg
+ 29.16%   10.420      3 Template:Navigation_menu_2
+ 18.37%    6.564      1 Template:Userdocnavi/bg
+ 12.62%    4.510      1 Template:Interface_navi/bg
+  6.11%    2.183      2 Template:Code
+  5.50%    1.965     11 Template:MenuCommand
+  4.65%    1.663      2 Template:Caption
+  4.28%    1.528      1 Template:TOCright
+  4.24%    1.514      6 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124062751 and revision id 1743214. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124062804 and revision id 1743216. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
