--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Python_Console.html" class="mw-pt-progress mw-pt-progress--complete" title="Console Python (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Python_Console.html" class="mw-pt-progress mw-pt-progress--complete" title="Konsola Pythona (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Python_Console.html" class="mw-pt-progress mw-pt-progress--low" title="Console Python (11% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Python_Console.html" class="mw-pt-progress mw-pt-progress--low" title="&#1050;&#1086;&#1085;&#1089;&#1086;&#1083;&#1100; Python (11% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/Python_Console.html" class="mw-pt-progress mw-pt-progress--low" title="&#54028;&#51060;&#50028; &#53080;&#49556;(Python console) (0% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
@@ -58,12 +58,12 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span id=".D0.91.D0.B5.D0.BB.D0.B5.D0.B6.D0.BA.D0.B8"></span><span class="mw-headline" id="&#1041;&#1077;&#1083;&#1077;&#1078;&#1082;&#1080;">&#1041;&#1077;&#1083;&#1077;&#1078;&#1082;&#1080;</span></h2>
-<ul><li>One has the ability to scroll the API in the Python Console. Example:
-<ol><li>In the console type: <code>FreeCAD.</code></li>
-<li>A dialog box will display with optional classes/functions to choose from</li>
-<li>Scroll through the list to read the description of each class/function</li>
-<li>By choosing a function and following it with a <code>.</code> one can repeat steps 2 and 3 to traverse deeper in to the API</li></ol></li>
-<li>Tab/Word completion is supported using the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Space</span> shortcut</li></ul>
+<ul><li>&#1055;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;&#1090; &#1080;&#1084;&#1072; &#1074;&#1098;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086;&#1089;&#1090; &#1076;&#1072; &#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1078;&#1076;&#1072; API &#1074; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1085;&#1072; Python. &#1055;&#1088;&#1080;&#1084;&#1077;&#1088;:
+<ol><li>&#1042; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1072;&#1082;&#1086; &#1085;&#1072;&#1087;&#1080;&#1096;&#1077;&#1090;&#1077;: <code>FreeCAD.</code></li>
+<li>&#1065;&#1077; &#1089;&#1077; &#1087;&#1086;&#1082;&#1072;&#1078;&#1077; &#1076;&#1080;&#1072;&#1083;&#1086;&#1075;&#1086;&#1074; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094; &#1089; &#1085;&#1077;&#1079;&#1072;&#1076;&#1098;&#1083;&#1078;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1082;&#1083;&#1072;&#1089;&#1086;&#1074;&#1077;/&#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1080;, &#1086;&#1090; &#1082;&#1086;&#1080;&#1090;&#1086; &#1076;&#1072; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1090;&#1077;</li>
+<li>&#1055;&#1088;&#1077;&#1074;&#1098;&#1088;&#1090;&#1077;&#1090;&#1077; &#1087;&#1088;&#1077;&#1079; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082;&#1072;, &#1079;&#1072; &#1076;&#1072; &#1087;&#1088;&#1086;&#1095;&#1077;&#1090;&#1077;&#1090;&#1077; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1077;&#1090;&#1086; &#1085;&#1072; &#1074;&#1089;&#1077;&#1082;&#1080; &#1082;&#1083;&#1072;&#1089;/&#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1103;</li>
+<li>&#1063;&#1088;&#1077;&#1079; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1103; &#1080; &#1079;&#1072;&#1074;&#1098;&#1088;&#1096;&#1074;&#1072;&#1085;&#1077;&#1090;&#1086; &#1117; &#1089; <code>.</code> &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1087;&#1086;&#1074;&#1090;&#1086;&#1088;&#1080;&#1090;&#1077; &#1089;&#1090;&#1098;&#1087;&#1082;&#1080; 2 &#1080; 3, &#1079;&#1072; &#1076;&#1072; &#1085;&#1072;&#1074;&#1083;&#1077;&#1079;&#1077;&#1090;&#1077; &#1087;&#1086;-&#1076;&#1098;&#1083;&#1073;&#1086;&#1082;&#1086; &#1074; API</li></ol></li>
+<li>Tab/Word &#1079;&#1072;&#1074;&#1098;&#1088;&#1096;&#1074;&#1072;&#1085;&#1077; &#1089;&#1077; &#1080;&#1079;&#1074;&#1098;&#1088;&#1096;&#1074;&#1072; &#1089;  <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Space</span></li></ul>
 <p><br>
 </p>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -126,35 +126,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124062804
+Cached time: 20260124063625
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.125 seconds
+CPU time usage: 0.088 seconds
+Real time usage: 0.126 seconds
 Preprocessor visited node count: 532/1000000
 Post&#8208;expand include size: 32031/2097152 bytes
 Template argument size: 12138/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2688/5000000 bytes
+Unstrip post&#8208;expand size: 2692/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.733      1 -total
- 30.42%   10.869      1 Template:Std_Base_navi/bg
- 29.16%   10.420      3 Template:Navigation_menu_2
- 18.37%    6.564      1 Template:Userdocnavi/bg
- 12.62%    4.510      1 Template:Interface_navi/bg
-  6.11%    2.183      2 Template:Code
-  5.50%    1.965     11 Template:MenuCommand
-  4.65%    1.663      2 Template:Caption
-  4.28%    1.528      1 Template:TOCright
-  4.24%    1.514      6 Template:Incode
+100.00%   36.795      1 -total
+ 28.39%   10.446      1 Template:Std_Base_navi/bg
+ 22.68%    8.344      1 Template:Interface_navi/bg
+ 21.24%    7.815      3 Template:Navigation_menu_2
+ 13.75%    5.058      1 Template:Userdocnavi/bg
+  6.30%    2.319      6 Template:Incode
+  4.57%    1.682      2 Template:Code
+  4.49%    1.651      2 Template:KEY
+  4.00%    1.473     11 Template:MenuCommand
+  3.87%    1.425      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124062804 and revision id 1743216. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124063625 and revision id 1743218. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
