--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -29,7 +29,7 @@
 <li>&#1044;&#1086;&#1083;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072; <a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; <a href="../bg/Property_View.html" title="Property View/bg">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</a></li>
 <li><a href="../Selection_view.html" class="mw-redirect" title="Selection view">selection view</a></li>
 <li><a href="../Report_view.html" class="mw-redirect" title="Report view">report view</a></li>
-<li><a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a></li>
+<li><a href="../index.php?title=Python_console/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Python console/bg (page does not exist)">&#1050;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072; &#1079;&#1072; Python</a></li>
 <li><a href="../Status_bar.html" class="mw-redirect" title="Status bar">status bar</a></li>
 <li>&#1047;&#1072; &#1086;&#1073;&#1083;&#1072;&#1089;&#1090;&#1090;&#1072; &#1085;&#1072; &#1083;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1074;&#1080;&#1078;&#1090;&#1077; &#1089;&#1083;&#1077;&#1076;&#1085;&#1072;&#1090;&#1072; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1079;&#1072; &#1083;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;</li>
 <li><a href="../Std_Workbench.html" title="Std Workbench">Workbench selector</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1089;&#1072;&#1084; &#1087;&#1086; &#1089;&#1077;&#1073;&#1077; &#1089;&#1080; &#1077; &#1083;&#1077;&#1085;&#1090;&#1072; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;</li>
@@ -135,12 +135,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124075435
+Cached time: 20260124075635
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.112 seconds
+CPU time usage: 0.084 seconds
+Real time usage: 0.124 seconds
 Preprocessor visited node count: 357/1000000
 Post&#8208;expand include size: 11845/2097152 bytes
 Template argument size: 3410/2097152 bytes
@@ -151,18 +151,18 @@ Unstrip post&#8208;expand size: 2535/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.476      1 -total
- 24.87%    4.594      1 Template:Userdocnavi/bg
- 24.69%    4.561      1 Template:Interface_navi/bg
- 18.17%    3.358      7 Template:StdMenu
- 15.39%    2.843      2 Template:Navigation_menu_2
-  8.73%    1.613      1 Template:TOCright
-  8.35%    1.543      1 Template:Version
-  8.09%    1.495     20 Template:MenuCommand
-  6.62%    1.223      1 Template:Caption
+100.00%   32.606      1 -total
+ 25.34%    8.261      1 Template:Interface_navi/bg
+ 24.29%    7.919      1 Template:Userdocnavi/bg
+ 20.71%    6.753      7 Template:StdMenu
+ 17.03%    5.553      2 Template:Navigation_menu_2
+ 12.27%    4.000     20 Template:MenuCommand
+  9.08%    2.960      1 Template:Caption
+  7.18%    2.341      1 Template:Version
+  5.82%    1.899      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260124075435 and revision id 1743266. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260124075634 and revision id 1743268. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
