--- a/wiki/Basic_TechDraw_Tutorial/nl.html
+++ b/wiki/Basic_TechDraw_Tutorial/nl.html
@@ -66,7 +66,9 @@
 <p>This tutorial introduces the new user to some of the tools and techniques used in the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">Technical Drawing (TechDraw) Workbench</a></span>. This tutorial is not a complete and comprehensive guide to the TechDraw Workbench and many of the tools and capabilities are not covered. This tutorial will take user through the steps needed to produce technical drawings of the part from the <a href="../Basic_Part_Design_Tutorial.html" title="Basic Part Design Tutorial">Basic Part Design Tutorial</a>.
 </p>
 </div>
+<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Before_You_Begin">Before You Begin</span></h2>
+</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Download the <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Examples/blob/master/Basic_Part_Design_Tutorial_Example_017_Files/Basic_Part_Design_Tutorial_017.fcstd?raw=true">sample file</a> from the Part Design tutorial.
 </p>
@@ -243,13 +245,13 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123140144
+Cached time: 20260124090504
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.106 seconds
-Preprocessor visited node count: 216/1000000
+CPU time usage: 0.099 seconds
+Real time usage: 0.380 seconds
+Preprocessor visited node count: 217/1000000
 Post&#8208;expand include size: 4086/2097152 bytes
 Template argument size: 548/2097152 bytes
 Highest expansion depth: 3/100
@@ -259,15 +261,15 @@ Unstrip post&#8208;expand size: 2047/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.528      1 -total
- 35.68%    2.686      1 Template:TutorialInfo
- 16.56%    1.247      1 Template:TechDraw_Tools_navi/nl
- 15.59%    1.174      6 Template:KEY
- 13.75%    1.035      3 Template:Button
-  8.69%    0.654      1 Template:Userdocnavi/nl
+100.00%   33.444      1 -total
+ 26.41%    8.832      3 Template:Button
+ 25.63%    8.573      1 Template:TutorialInfo
+ 23.45%    7.841      6 Template:KEY
+ 12.63%    4.225      1 Template:TechDraw_Tools_navi/nl
+  8.37%    2.801      1 Template:Userdocnavi/nl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412427-0!canonical and timestamp 20260123140144 and revision id 1742908. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412427-0!canonical and timestamp 20260124090501 and revision id 1743271. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
