--- a/wiki/fr/TechDraw_GeometricHatch.html
+++ b/wiki/fr/TechDraw_GeometricHatch.html
@@ -53,11 +53,8 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<div class="mw-translate-fuzzy">
-<p>L'outil <b>TechDraw Hachures g&eacute;om&eacute;triques</b> remplit une r&eacute;gion ferm&eacute;e dans une vue avec un motif bas&eacute; sur une sp&eacute;cification de hachures AutoDesk PAT. Vous pouvez &eacute;galement utiliser l'outil <a href="../fr/TechDraw_Hatch.html" title="TechDraw Hatch/fr">TechDraw Hachures par motif</a> utilise des motifs de hachures bas&eacute;s sur le SVG. Voir <a href="../fr/TechDraw_Hatching.html" title="TechDraw Hatching/fr">TechDraw Hachures</a> pour plus de d&eacute;tails.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=TechDraw_GeomHatch_example.png&amp;filetimestamp=20181126213349&amp;.html" class="mw-file-description"><img src="../File/TechDraw_GeomHatch_example.png" decoding="async" width="300" height="188" class="mw-file-element" data-file-width="342" data-file-height="214"></a></span>
+<p>L'outil <b>TechDraw Hachures g&eacute;om&eacute;triques</b> remplit une r&eacute;gion ferm&eacute;e dans une vue avec un motif bas&eacute; sur une sp&eacute;cification de hachures Autodesk PAT. Vous pouvez &eacute;galement utiliser l'outil <a href="../fr/TechDraw_Hatch.html" title="TechDraw Hatch/fr">TechDraw Hachures par motif</a> utilise des motifs de hachures bas&eacute;s sur le SVG. Voir <a href="../fr/TechDraw_Hatching.html" title="TechDraw Hatching/fr">TechDraw Hachures</a> pour plus de d&eacute;tails.
+</p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_GeomHatch_example.png&amp;filetimestamp=20181126213349&amp;.html" class="mw-file-description"><img src="../File/TechDraw_GeomHatch_example.png" decoding="async" width="300" height="188" class="mw-file-element" data-file-width="342" data-file-height="214"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Motif de hachures g&eacute;om&eacute;triques sur une face</p>
 <p><span id="Usage"></span>
@@ -166,13 +163,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124111208
+Cached time: 20260124111233
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.165 seconds
-Preprocessor visited node count: 680/1000000
+CPU time usage: 0.081 seconds
+Real time usage: 0.116 seconds
+Preprocessor visited node count: 679/1000000
 Post&#8208;expand include size: 27701/2097152 bytes
 Template argument size: 10755/2097152 bytes
 Highest expansion depth: 7/100
@@ -182,19 +179,19 @@ Unstrip post&#8208;expand size: 5447/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.609      1 -total
- 19.26%    8.976      1 Template:TechDraw_Tools_navi/fr
- 15.26%    7.113      2 Template:Navigation_menu_2
- 10.84%    5.053      4 Template:PropertyData
-  9.23%    4.300      1 Template:GuiCommand/fr
-  7.93%    3.696      4 Template:Code
-  7.93%    3.696      6 Template:Variable
-  7.60%    3.541      1 Template:Userdocnavi/fr
-  7.30%    3.402      2 Template:Docnav/fr
-  7.07%    3.297      1 Template:Caption
+100.00%   27.661      1 -total
+ 21.99%    6.082      1 Template:TechDraw_Tools_navi/fr
+ 14.91%    4.125      2 Template:Navigation_menu_2
+ 11.71%    3.240      1 Template:GuiCommand/fr
+ 11.28%    3.120      4 Template:PropertyData
+  9.23%    2.554      1 Template:Userdocnavi/fr
+  8.07%    2.232      6 Template:Variable
+  7.71%    2.134      4 Template:Code
+  7.35%    2.032      2 Template:Docnav/fr
+  7.09%    1.961      2 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180800-0!canonical and timestamp 20260124111208 and revision id 1743306. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180800-0!canonical and timestamp 20260124111233 and revision id 1743308. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
