--- a/wiki/fr/TechDraw_Hatch.html
+++ b/wiki/fr/TechDraw_Hatch.html
@@ -77,7 +77,7 @@
 <li>Des exemples de mod&egrave;les <a href="../fr/SVG.html" title="SVG/fr">SVG</a> sont disponibles localement dans</li></ul>
 <dl><dd><div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="err">$</span><span class="n">INSTALL_DIR</span><span class="o">/</span><span class="n">data</span><span class="o">/</span><span class="n">Mod</span><span class="o">/</span><span class="n">TechDraw</span><span class="o">/</span><span class="n">Patterns</span>
 </pre></div></dd>
-<dd>o&ugrave; <code>$INSTALL_DIR</code> est le r&eacute;pertoire o&ugrave; FreeCAD a &eacute;t&eacute; install&eacute;, par exemple&nbsp;:</dd>
+<dd>O&ugrave; <code>$INSTALL_DIR</code> est le r&eacute;pertoire dans lequel FreeCAD a &eacute;t&eacute; install&eacute;, par exemple&nbsp;:</dd>
 <dd><div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="o">/</span><span class="n">usr</span><span class="o">/</span><span class="n">share</span><span class="o">/</span><span class="n">freecad</span><span class="o">/</span><span class="n">data</span><span class="o">/</span><span class="n">Mod</span><span class="o">/</span><span class="n">TechDraw</span><span class="o">/</span><span class="n">Patterns</span>
 </pre></div></dd>
 <dd>ils sont &eacute;galement disponibles sur <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/tree/master/src/Mod/TechDraw/Patterns">GitHub</a>.</dd></dl>
@@ -146,12 +146,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124110904
+Cached time: 20260124111628
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.125 seconds
+CPU time usage: 0.100 seconds
+Real time usage: 0.226 seconds
 Preprocessor visited node count: 617/1000000
 Post&#8208;expand include size: 27320/2097152 bytes
 Template argument size: 10455/2097152 bytes
@@ -162,19 +162,19 @@ Unstrip post&#8208;expand size: 3918/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.341      1 -total
- 16.48%    5.989      1 Template:TechDraw_Tools_navi/fr
- 11.87%    4.315      2 Template:Navigation_menu_2
- 10.87%    3.949      2 Template:PropertyData
-  9.38%    3.409      1 Template:Userdocnavi/fr
-  9.08%    3.299      1 Template:GuiCommand/fr
-  7.06%    2.565      3 Template:Code
-  7.04%    2.558      2 Template:Docnav/fr
-  6.85%    2.489      4 Template:Variable
-  6.45%    2.343      1 Template:Incode
+100.00%   91.256      1 -total
+ 20.25%   18.477      1 Template:Version/fr
+ 13.72%   12.523      2 Template:PropertyData
+ 10.18%    9.294      1 Template:TechDraw_Tools_navi/fr
+  8.37%    7.636      2 Template:Button
+  7.98%    7.283      4 Template:Variable
+  7.86%    7.173      3 Template:Code
+  6.04%    5.511      2 Template:Navigation_menu_2
+  5.53%    5.045      1 Template:Incode
+  5.31%    4.849      1 Template:Userdocnavi/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86948-0!canonical and timestamp 20260124110904 and revision id 1743300. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86948-0!canonical and timestamp 20260124111628 and revision id 1743316. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
