--- a/wiki/fr/TechDraw_Hatch.html
+++ b/wiki/fr/TechDraw_Hatch.html
@@ -80,7 +80,7 @@
 <dd>O&ugrave; <code>$INSTALL_DIR</code> est le r&eacute;pertoire dans lequel FreeCAD a &eacute;t&eacute; install&eacute;, par exemple&nbsp;:</dd>
 <dd><div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="o">/</span><span class="n">usr</span><span class="o">/</span><span class="n">share</span><span class="o">/</span><span class="n">freecad</span><span class="o">/</span><span class="n">data</span><span class="o">/</span><span class="n">Mod</span><span class="o">/</span><span class="n">TechDraw</span><span class="o">/</span><span class="n">Patterns</span>
 </pre></div></dd>
-<dd>ils sont &eacute;galement disponibles sur <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/tree/master/src/Mod/TechDraw/Patterns">GitHub</a>.</dd></dl>
+<dd>Ils sont &eacute;galement disponibles sur <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/tree/master/src/Mod/TechDraw/Patterns">GitHub</a>.</dd></dl>
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
@@ -146,12 +146,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124111628
+Cached time: 20260124111642
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.226 seconds
+CPU time usage: 0.099 seconds
+Real time usage: 0.141 seconds
 Preprocessor visited node count: 617/1000000
 Post&#8208;expand include size: 27320/2097152 bytes
 Template argument size: 10455/2097152 bytes
@@ -162,19 +162,19 @@ Unstrip post&#8208;expand size: 3918/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   91.256      1 -total
- 20.25%   18.477      1 Template:Version/fr
- 13.72%   12.523      2 Template:PropertyData
- 10.18%    9.294      1 Template:TechDraw_Tools_navi/fr
-  8.37%    7.636      2 Template:Button
-  7.98%    7.283      4 Template:Variable
-  7.86%    7.173      3 Template:Code
-  6.04%    5.511      2 Template:Navigation_menu_2
-  5.53%    5.045      1 Template:Incode
-  5.31%    4.849      1 Template:Userdocnavi/fr
+100.00%   43.230      1 -total
+ 19.84%    8.577      1 Template:TechDraw_Tools_navi/fr
+ 16.60%    7.178      1 Template:Userdocnavi/fr
+ 16.05%    6.940      2 Template:Navigation_menu_2
+  9.12%    3.944      2 Template:PropertyData
+  8.39%    3.628      1 Template:GuiCommand/fr
+  7.12%    3.080      3 Template:Code
+  6.85%    2.962      4 Template:Variable
+  5.95%    2.572      2 Template:Docnav/fr
+  5.67%    2.450      2 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86948-0!canonical and timestamp 20260124111628 and revision id 1743316. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:86948-0!canonical and timestamp 20260124111642 and revision id 1743318. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
